--- a/iop/sio/Makefile
+++ b/iop/sio/Makefile
@@ -6,7 +6,7 @@
 # Licenced under Academic Free License version 2.0
 # Review ps2sdk README & LICENSE files for further details.
 
-SUBDIRS = mx4sio_bd mx4sio_bd_mini
+SUBDIRS = mx4sio_bd mx4sio_bd_mini mmceman mmcedrv mmceigr
 
 include $(PS2SDKSRC)/Defs.make
 include $(PS2SDKSRC)/Rules.make
