--- a/iop/sio/mmceigr/Makefile
+++ b/iop/sio/mmceigr/Makefile
@@ -11,6 +11,11 @@ all: $(IOP_BIN)
 clean:
 	rm -f -r $(IOP_OBJS) $(IOP_BIN)
 
-include $(PS2SDK)/Defs.make
-include $(PS2SDK)/samples/Makefile.pref
-include $(PS2SDK)/samples/Makefile.iopglobal
+#include $(PS2SDK)/Defs.make
+#include $(PS2SDK)/samples/Makefile.pref
+#include $(PS2SDK)/samples/Makefile.iopglobal
+
+include $(PS2SDKSRC)/Defs.make
+include $(PS2SDKSRC)/iop/Rules.bin.make
+include $(PS2SDKSRC)/iop/Rules.make
+include $(PS2SDKSRC)/iop/Rules.release
