--- a/iop/sio/mmceman/Makefile
+++ b/iop/sio/mmceman/Makefile
@@ -4,6 +4,7 @@ IOP_OBJS = ioplib.o sio2man_hook.o mmce_sio2.o mmce_cmds.o mmce_fs.o imports.o m
 #Needed for iomanX
 IOP_CFLAGS += -DIOMANX_OLD_NAME_COMPATIBILITY=0 -DIOMANX_OLD_NAME_ADDDELDRV=0
 IOP_INCS += \
+	-I$(PS2SDKSRC)/iop/system/dmacman/include \
 	-I$(PS2SDKSRC)/iop/system/intrman/include \
 	-I$(PS2SDKSRC)/iop/system/loadcore/include \
 	-I$(PS2SDKSRC)/iop/system/sio2man/include \
