--- a/iop/sio/mmcedrv/Makefile
+++ b/iop/sio/mmcedrv/Makefile
@@ -15,6 +15,15 @@ $(info -- MMCEDRV)
 IOP_BIN = irx/mmcedrv.irx
 IOP_OBJS = ioplib.o sio2man_hook.o mmce_sio2.o exports.o imports.o mmcedrv.o
 IOP_CFLAGS += -DMMCEDRV
+IOP_INCS += \
+	-I$(PS2SDKSRC)/iop/system/dmacman/include \
+	-I$(PS2SDKSRC)/iop/system/intrman/include \
+	-I$(PS2SDKSRC)/iop/system/loadcore/include \
+	-I$(PS2SDKSRC)/iop/system/sio2man/include \
+	-I$(PS2SDKSRC)/iop/system/stdio/include \
+	-I$(PS2SDKSRC)/iop/system/sysclib/include \
+	-I$(PS2SDKSRC)/iop/system/threadman/include \
+	-I$(PS2SDKSRC)/iop/system/iomanx/include 
 
 ifeq ($(DEBUG), 1)
   $(info -- MMCEMAN debug enabled)
