--- a/iop/sio/mmceigr/Makefile
+++ b/iop/sio/mmceigr/Makefile
@@ -8,6 +8,15 @@
 
 IOP_SRC_DIR ?= ../mmceman/src/
 IOP_INC_DIR ?= ../mmceman/include/
+IOP_INCS += \
+	-I$(PS2SDKSRC)/iop/system/dmacman/include \
+	-I$(PS2SDKSRC)/iop/system/intrman/include \
+	-I$(PS2SDKSRC)/iop/system/loadcore/include \
+	-I$(PS2SDKSRC)/iop/system/sio2man/include \
+	-I$(PS2SDKSRC)/iop/system/stdio/include \
+	-I$(PS2SDKSRC)/iop/system/sysclib/include \
+	-I$(PS2SDKSRC)/iop/system/threadman/include \
+	-I$(PS2SDKSRC)/iop/system/iomanx/include 
 
 $(info -- MMCEIGR)
 #Build single shot module to issue switch to bootcard on IGR
